<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>cps-e2e-test-automation</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>cps-e2e-test-automation</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <playwright.version>1.58.0</playwright.version>
        <assertj.version>3.27.7</assertj.version>
        <lombook.version>1.18.42</lombook.version>
        <jackson.core.version>3.0.4</jackson.core.version>
        <cucumber.version>7.34.2</cucumber.version>
    </properties>

    <dependencies>
        <!-- Playwright -->
        <dependency>
            <groupId>com.microsoft.playwright</groupId>
            <artifactId>playwright</artifactId>
            <version>${playwright.version}</version>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombook.version}</version>
        </dependency>

        <!-- Source: https://mvnrepository.com/artifact/tools.jackson.core/jackson-core -->
        <dependency>
            <groupId>tools.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.core.version}</version>
        </dependency>

        <!-- Source: https://mvnrepository.com/artifact/tools.jackson.core/jackson-databind -->
        <dependency>
            <groupId>tools.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.core.version}</version>
        </dependency>

        <!-- Source: https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber.version}</version>
        </dependency>

        <!-- Source: https://mvnrepository.com/artifact/io.cucumber/cucumber-picocontainer -->
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-picocontainer</artifactId>
            <version>${cucumber.version}</version>
        </dependency>

        <!-- Source: https://mvnrepository.com/artifact/io.cucumber/cucumber-junit-platform-engine -->
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-junit-platform-engine</artifactId>
            <version>${cucumber.version}</version>
        </dependency>

        <!-- Source: https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>6.0.3</version>
        </dependency>


        <dependency>
                    <groupId>org.json</groupId>
                    <artifactId>json</artifactId>
                    <version>20251224</version>
        </dependency>

        <!-- Source: https://mvnrepository.com/artifact/org.jetbrains/annotations -->
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>26.0.2-1</version>
        </dependency>

        <!-- Source: https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path -->
        <dependency>
            <groupId>com.jayway.jsonpath</groupId>
            <artifactId>json-path</artifactId>
            <version>2.10.0</version>
        </dependency>

        <dependency>
            <groupId>com.github.javafaker</groupId>
            <artifactId>javafaker</artifactId>
            <version>1.0.2</version>
        </dependency>

                <dependency>
                    <groupId>commons-io</groupId>
                    <artifactId>commons-io</artifactId>
                    <version>2.20.0</version>
                </dependency>

                <dependency>
                    <groupId>io.rest-assured</groupId>
                    <artifactId>rest-assured</artifactId>
                    <version>6.0.0</version>
                </dependency>

                <dependency>
                    <groupId>io.github.cdimascio</groupId>
                    <artifactId>java-dotenv</artifactId>
                    <version>5.2.2</version>
                </dependency>



<!--        <dependency>-->
<!--            <groupId>org.slf4j</groupId>-->
<!--            <artifactId>slf4j-simple</artifactId>-->
<!--            <version>2.0.9</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>org.json</groupId>-->
<!--            <artifactId>json</artifactId>-->
<!--            <version>20250517</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>org.projectlombok</groupId>-->
<!--            <artifactId>lombok</artifactId>-->
<!--            <version>1.18.38</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>org.reflections</groupId>-->
<!--            <artifactId>reflections</artifactId>-->
<!--            <version>0.10.2</version>-->
<!--            <scope>test</scope>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>commons-io</groupId>-->
<!--            <artifactId>commons-io</artifactId>-->
<!--            <version>2.20.0</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>io.cucumber</groupId>-->
<!--            <artifactId>cucumber-picocontainer</artifactId>-->
<!--            <version>7.28.1</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>com.google.code.gson</groupId>-->
<!--            <artifactId>gson</artifactId>-->
<!--            <version>2.10.1</version> &lt;!&ndash; or latest stable version &ndash;&gt;-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>com.fasterxml.jackson.core</groupId>-->
<!--            <artifactId>jackson-databind</artifactId>-->
<!--            <version>2.17.0</version>-->
<!--        </dependency>-->
<!--        &lt;!&ndash; Cucumber with JUnit 5 &ndash;&gt;-->
<!--        <dependency>-->
<!--            <groupId>io.cucumber</groupId>-->
<!--            <artifactId>cucumber-java</artifactId>-->
<!--            <version>7.28.1</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>io.cucumber</groupId>-->
<!--            <artifactId>cucumber-junit</artifactId>-->
<!--            <version>7.28.1</version>-->
<!--            <scope>test</scope>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>junit</groupId>-->
<!--            <artifactId>junit</artifactId>-->
<!--            <version>4.13.2</version>-->
<!--            <scope>test</scope>-->
<!--        </dependency>-->


<!--        <dependency>-->
<!--            <groupId>commons-beanutils</groupId>-->
<!--            <artifactId>commons-beanutils</artifactId>-->
<!--            <version>1.9.4</version> &lt;!&ndash; or latest &ndash;&gt;-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>io.rest-assured</groupId>-->
<!--            <artifactId>rest-assured</artifactId>-->
<!--            <version>5.4.0</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>io.github.cdimascio</groupId>-->
<!--            <artifactId>java-dotenv</artifactId>-->
<!--            <version>5.1.4</version>-->
<!--        </dependency>-->

        <!--        <dependency>-->
        <!--            <groupId>com.github.javafaker</groupId>-->
        <!--            <artifactId>javafaker</artifactId>-->
        <!--            <version>1.0.2</version>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>com.jayway.jsonpath</groupId>-->
        <!--            <artifactId>json-path</artifactId>-->
        <!--            <version>2.8.0</version>-->
        <!--        </dependency>-->

<!--        <dependency>-->
<!--            <groupId>org.assertj</groupId>-->
<!--            <artifactId>assertj-core</artifactId>-->
<!--            <version>3.24.2</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>org.apache.commons</groupId>-->
<!--            <artifactId>commons-configuration2</artifactId>-->
<!--            <version>2.8.0</version>-->
<!--        </dependency>-->




    </dependencies>

    <build>
        <plugins>
            <!-- Compiler Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.38</version>
                        </path>
                    </annotationProcessorPaths>
                <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>

            <!-- Surefire Plugin for JUnit 5 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M8</version> <!-- or latest -->
                <configuration>
                        <argLine>--enable-native-access=ALL-UNNAMED</argLine>
                    <includes>
                        <include>**/*Test.java</include>
                        <include>**/*Tests.java</include>
                        <include>**/*TestCase.java</include>
                        <include>**/*TestRunnerApi.java</include>
                    </includes>
                    <useModulePath>false</useModulePath> <!-- helpful sometimes -->
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
